# chipboy-emu

./: .gitignore  .gitmodules  README.md
emu_core/: CMakeLists.txt
emu_core/include/: common.h  emu_error.h  emulator.h  master_slave.h  schedule.h
emu_core/include/core/: bus.h  cpu.h  cpu_instrs.h  interrupt.h  joyinput.h
emu_core/include/core/cartridge/: mbc_common.h
emu_core/include/platform/: error_handling.h  memory.h
emu_core/include/utils/: static_heap.h  static_pqueue.h  test.c
emu_core/py_scripts/: optable.h  template_optable.h
emu_core/src/: emulator.c
emu_core/src/core/: bus.c  interrupt.c  schedule.c
emu_core/src/core/cpu/: cpu.c  cpu_instrs.c
emu_core/src/cpu/: cpu.c  cpu_instrs.c  cpu_instrs_new.c
emu_core/src/platform/pc/: emu_memory.c  error_handling.c
emu_core/tests/test_utils/: test_pq.cpp
hw_emu/.metadata/: .log4j2.xml  version.ini
hw_emu/.metadata/.plugins/org.eclipse.cdt.core/: chipboy_hw_emu.1751952797208.pdom  chipboy_hw_emu.language.settings.xml
hw_emu/.metadata/.plugins/org.eclipse.core.resources/: 1.snap
hw_emu/chipboy_hw_emu/: .cproject  .project
software_emu/include/: cart.h  common.h  error.h  master_slave.h
software_emu/include/core/: cpu.h  memorymap.h
software_emu/include/machdep/: bus.h  cart.h  cpu.h  cpu_instrs.h
software_emu/py_experiments/: optable.ipynb
software_emu/py_scripts/: README.md  gen_optable.py  optable.h  template_optable.h
software_emu/src/: bus.c  cart.c  cpu.c  cpu_instrs.c  cpu_instrs_new.c
software_emu/tests/: test_loadrom.c
(+5 files in other folders)
